// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processes last 30 events: after filter - buffers 1`] = `Array []`;

exports[`processes last 30 events: after filter - estimated cycle times 1`] = `
Map {
  "PartAndStationOperation {
  \\"operation\\": \\"progi\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"progm\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"progz\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
}
`;

exports[`processes last 30 events: after filter - inspections 1`] = `
Map {
  "PartAndInspType {
  \\"inspType\\": \\"Insp1\\",
  \\"part\\": \\"part222\\",
}" => Array [
    Object {
      "cntr": 6,
      "inspType": "Insp1",
      "materialID": 15510,
      "part": "part222",
      "result": Object {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialv",
      "time": 2018-01-31T09:51:05.000Z,
      "workorder": "workh",
    },
    Object {
      "cntr": 7,
      "inspType": "Insp1",
      "materialID": 15510,
      "part": "part222",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 15510,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialv",
      "time": 2018-01-31T09:51:10.000Z,
      "workorder": "workh",
    },
    Object {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 15510,
      "part": "part222",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "serialv",
      "time": 2018-01-31T09:58:10.000Z,
      "workorder": "workh",
    },
  ],
  "PartAndInspType {
  \\"inspType\\": \\"Insp1\\",
  \\"part\\": \\"part111\\",
}" => Array [
    Object {
      "cntr": 6,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": Object {
        "toInspect": true,
        "type": 1,
      },
      "serial": "seriala",
      "time": 2018-02-02T09:57:05.000Z,
      "workorder": "work7",
    },
    Object {
      "cntr": 7,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 70329,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriala",
      "time": 2018-02-02T09:57:10.000Z,
      "workorder": "work7",
    },
    Object {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:04:10.000Z,
      "workorder": "work7",
    },
    Object {
      "cntr": 6,
      "inspType": "Insp1",
      "materialID": 90793,
      "part": "part111",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 90793,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serial8",
      "time": 2018-02-08T09:39:05.000Z,
      "workorder": "worko",
    },
    Object {
      "cntr": 7,
      "inspType": "Insp1",
      "materialID": 90793,
      "part": "part111",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "serial8",
      "time": 2018-02-08T09:46:05.000Z,
      "workorder": "worko",
    },
  ],
}
`;

exports[`processes last 30 events: after filter - material summary 1`] = `
Object {
  "matIdsForJob": Map {
    "uniqi" => Array [
      70329,
    ],
    "uniqk" => Array [
      90793,
    ],
    "uniqv" => Array [
      15510,
    ],
  },
  "matsById": Map {
    "90793" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-02-08T09:46:05.000Z,
        },
      },
      "completed_inspect_time": 2018-02-08T09:46:05.000Z,
      "jobUnique": "uniqk",
      "last_event": 2018-02-08T09:46:05.000Z,
      "last_unload_time": 2018-02-08T09:34:05.000Z,
      "materialID": 90793,
      "numProcesses": 3,
      "partName": "part111",
      "signaledInspections": Array [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "1": 2018-02-08T09:34:05.000Z,
      },
    },
    "15510" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-01-31T09:58:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T09:58:10.000Z,
      "completed_last_proc_machining": true,
      "jobUnique": "uniqv",
      "last_event": 2018-01-31T09:58:10.000Z,
      "last_unload_time": 2018-01-31T09:46:05.000Z,
      "materialID": 15510,
      "numProcesses": 1,
      "partName": "part222",
      "signaledInspections": Array [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "1": 2018-01-31T09:46:05.000Z,
      },
    },
    "70329" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-02-02T10:04:10.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:04:10.000Z,
      "jobUnique": "uniqi",
      "last_event": 2018-02-02T10:04:10.000Z,
      "last_unload_time": 2018-02-02T09:52:05.000Z,
      "materialID": 70329,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": Array [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "1": 2018-02-02T09:52:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events: after filter - pallet cycles 1`] = `
Map {
  "palaa" => Array [],
  "palbb" => Array [
    Object {
      "active": -1,
      "x": 2018-01-31T09:51:10.000Z,
      "y": 44,
    },
    Object {
      "active": -1,
      "x": 2018-02-02T09:57:10.000Z,
      "y": 44,
    },
  ],
  "palcc" => Array [
    Object {
      "active": -1,
      "x": 2018-02-08T09:39:05.000Z,
      "y": 44,
    },
  ],
}
`;

exports[`processes last 30 events: after filter - station cycles 1`] = `
Array [
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facec",
        "id": 15510,
        "numproc": 1,
        "part": "part222",
        "proc": 1,
        "serial": "serialv",
        "uniq": "uniqv",
        "workorder": "workh",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 3,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "facec",
        "id": 15510,
        "numproc": 1,
        "part": "part222",
        "proc": 1,
        "serial": "serialv",
        "uniq": "uniqv",
        "workorder": "workh",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progm",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:36:05.000Z,
    "y": 24,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 5,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facec",
        "id": 15510,
        "numproc": 1,
        "part": "part222",
        "proc": 1,
        "serial": "serialv",
        "uniq": "uniqv",
        "workorder": "workh",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:46:05.000Z,
    "y": 3,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 3,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progz",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:42:05.000Z,
    "y": 30,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 5,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:52:05.000Z,
    "y": 3,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "faceu",
        "id": 90793,
        "numproc": 3,
        "part": "part111",
        "proc": 1,
        "serial": "serial8",
        "uniq": "uniqk",
        "workorder": "worko",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-08T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0,
    "activeMinutes": 12,
    "cntr": 3,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "faceu",
        "id": 90793,
        "numproc": 3,
        "part": "part111",
        "proc": 1,
        "serial": "serial8",
        "uniq": "uniqk",
        "workorder": "worko",
      },
    ],
    "medianCycleMinutes": 0,
    "operation": "progw",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-08T09:24:05.000Z,
    "y": 12,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 5,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "faceu",
        "id": 90793,
        "numproc": 3,
        "part": "part111",
        "proc": 1,
        "serial": "serial8",
        "uniq": "uniqk",
        "workorder": "worko",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palcc",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-08T09:34:05.000Z,
    "y": 3,
  },
]
`;

exports[`processes last 30 events: after filter - tool use 1`] = `Map {}`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - buffers 1`] = `Array []`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - estimated cycle times 1`] = `
Map {
  "PartAndStationOperation {
  \\"operation\\": \\"progi\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 18,
    "medianMinutesForSingleMat": 18,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"progm\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 24,
    "medianMinutesForSingleMat": 24,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"progz\\",
  \\"part\\": \\"part111\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"MC\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 30,
    "medianMinutesForSingleMat": 30,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"LOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 2,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 6,
    "medianMinutesForSingleMat": 6,
  },
  "PartAndStationOperation {
  \\"operation\\": \\"UNLOAD\\",
  \\"part\\": \\"part222\\",
  \\"proc\\": 1,
  \\"statGroup\\": \\"L/U\\",
}" => Object {
    "MAD_aboveMinutes": 0.25,
    "MAD_belowMinutes": 0.25,
    "expectedCycleMinutesForSingleMat": 3,
    "medianMinutesForSingleMat": 3,
  },
}
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - inspections 1`] = `
Map {
  "PartAndInspType {
  \\"inspType\\": \\"Insp1\\",
  \\"part\\": \\"part222\\",
}" => Array [
    Object {
      "cntr": 6,
      "inspType": "Insp1",
      "materialID": 90079,
      "part": "part222",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 90079,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialm",
      "time": 2018-01-06T09:45:05.000Z,
      "workorder": "work7",
    },
    Object {
      "cntr": 7,
      "inspType": "Insp1",
      "materialID": 90079,
      "part": "part222",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "serialm",
      "time": 2018-01-06T09:52:05.000Z,
      "workorder": "work7",
    },
    Object {
      "cntr": 6,
      "inspType": "Insp1",
      "materialID": 15510,
      "part": "part222",
      "result": Object {
        "toInspect": true,
        "type": 1,
      },
      "serial": "serialv",
      "time": 2018-01-31T09:51:05.000Z,
      "workorder": "workh",
    },
    Object {
      "cntr": 7,
      "inspType": "Insp1",
      "materialID": 15510,
      "part": "part222",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 15510,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "serialv",
      "time": 2018-01-31T09:51:10.000Z,
      "workorder": "workh",
    },
    Object {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 15510,
      "part": "part222",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "serialv",
      "time": 2018-01-31T09:58:10.000Z,
      "workorder": "workh",
    },
  ],
  "PartAndInspType {
  \\"inspType\\": \\"Insp1\\",
  \\"part\\": \\"part111\\",
}" => Array [
    Object {
      "cntr": 6,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": Object {
        "toInspect": true,
        "type": 1,
      },
      "serial": "seriala",
      "time": 2018-02-02T09:57:05.000Z,
      "workorder": "work7",
    },
    Object {
      "cntr": 7,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": Object {
        "actualPath": Array [
          Object {
            "LoadStation": 1,
            "MaterialID": 70329,
            "Pallet": "6",
            "Process": 1,
            "Stops": Array [
              Object {
                "StationName": "MC",
                "StationNum": 4,
              },
            ],
            "UnloadStation": 2,
          },
        ],
        "toInspect": true,
        "type": 0,
      },
      "serial": "seriala",
      "time": 2018-02-02T09:57:10.000Z,
      "workorder": "work7",
    },
    Object {
      "cntr": 8,
      "inspType": "Insp1",
      "materialID": 70329,
      "part": "part111",
      "result": Object {
        "success": true,
        "type": 2,
      },
      "serial": "seriala",
      "time": 2018-02-02T10:04:10.000Z,
      "workorder": "work7",
    },
  ],
}
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - material summary 1`] = `
Object {
  "matIdsForJob": Map {
    "uniqi" => Array [
      70329,
    ],
    "uniqt" => Array [
      90079,
    ],
    "uniqv" => Array [
      15510,
    ],
  },
  "matsById": Map {
    "15510" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-01-31T09:58:10.000Z,
        },
      },
      "completed_inspect_time": 2018-01-31T09:58:10.000Z,
      "completed_last_proc_machining": true,
      "jobUnique": "uniqv",
      "last_event": 2018-01-31T09:58:10.000Z,
      "last_unload_time": 2018-01-31T09:46:05.000Z,
      "materialID": 15510,
      "numProcesses": 1,
      "partName": "part222",
      "signaledInspections": Array [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "1": 2018-01-31T09:46:05.000Z,
      },
    },
    "70329" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-02-02T10:04:10.000Z,
        },
      },
      "completed_inspect_time": 2018-02-02T10:04:10.000Z,
      "jobUnique": "uniqi",
      "last_event": 2018-02-02T10:04:10.000Z,
      "last_unload_time": 2018-02-02T09:52:05.000Z,
      "materialID": 70329,
      "numProcesses": 4,
      "partName": "part111",
      "signaledInspections": Array [
        "Insp1",
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "1": 2018-02-02T09:52:05.000Z,
      },
    },
    "90079" => Object {
      "completedInspections": Object {
        "Insp1": Object {
          "success": true,
          "time": 2018-01-06T09:52:05.000Z,
        },
      },
      "completed_inspect_time": 2018-01-06T09:52:05.000Z,
      "completed_last_proc_machining": true,
      "jobUnique": "uniqt",
      "last_event": 2018-01-06T09:52:05.000Z,
      "last_unload_time": 2018-01-06T09:40:05.000Z,
      "materialID": 90079,
      "numProcesses": 2,
      "partName": "part222",
      "signaledInspections": Array [
        "Insp1",
      ],
      "startedProcess1": true,
      "unloaded_processes": Object {
        "2": 2018-01-06T09:40:05.000Z,
      },
    },
  },
}
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - pallet cycles 1`] = `
Map {
  "palaa" => Array [
    Object {
      "active": -1,
      "x": 2018-01-06T09:45:05.000Z,
      "y": 44,
    },
  ],
  "palbb" => Array [
    Object {
      "active": -1,
      "x": 2018-01-31T09:51:10.000Z,
      "y": 44,
    },
    Object {
      "active": -1,
      "x": 2018-02-02T09:57:10.000Z,
      "y": 44,
    },
  ],
}
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - station cycles 1`] = `
Array [
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facev",
        "id": 90079,
        "numproc": 2,
        "part": "part222",
        "proc": 2,
        "serial": "serialm",
        "uniq": "uniqt",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-06T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 18,
    "cntr": 3,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "facev",
        "id": 90079,
        "numproc": 2,
        "part": "part222",
        "proc": 2,
        "serial": "serialm",
        "uniq": "uniqt",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 18,
    "operation": "progi",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-06T09:30:05.000Z,
    "y": 18,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 5,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facev",
        "id": 90079,
        "numproc": 2,
        "part": "part222",
        "proc": 2,
        "serial": "serialm",
        "uniq": "uniqt",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palaa",
    "part": "part222",
    "process": 2,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-06T09:40:05.000Z,
    "y": 3,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facec",
        "id": 15510,
        "numproc": 1,
        "part": "part222",
        "proc": 1,
        "serial": "serialv",
        "uniq": "uniqv",
        "workorder": "workh",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-01-31T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 24,
    "cntr": 3,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "facec",
        "id": 15510,
        "numproc": 1,
        "part": "part222",
        "proc": 1,
        "serial": "serialv",
        "uniq": "uniqv",
        "workorder": "workh",
      },
    ],
    "medianCycleMinutes": 24,
    "operation": "progm",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-01-31T09:36:05.000Z,
    "y": 24,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 5,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "facec",
        "id": 15510,
        "numproc": 1,
        "part": "part222",
        "proc": 1,
        "serial": "serialv",
        "uniq": "uniqv",
        "workorder": "workh",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part222",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-01-31T09:46:05.000Z,
    "y": 3,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 6,
    "cntr": 1,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 6,
    "operation": "LOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 1,
    "x": 2018-02-02T09:09:05.000Z,
    "y": 6,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 30,
    "cntr": 3,
    "isLabor": false,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 30,
    "operation": "progz",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "MC",
    "stationNumber": 1,
    "x": 2018-02-02T09:42:05.000Z,
    "y": 30,
  },
  Object {
    "MAD_aboveMinutes": 0.25,
    "activeMinutes": 3,
    "cntr": 5,
    "isLabor": true,
    "material": Array [
      Object {
        "face": "face4",
        "id": 70329,
        "numproc": 4,
        "part": "part111",
        "proc": 1,
        "serial": "seriala",
        "uniq": "uniqi",
        "workorder": "work7",
      },
    ],
    "medianCycleMinutes": 3,
    "operation": "UNLOAD",
    "operator": "",
    "pallet": "palbb",
    "part": "part111",
    "process": 1,
    "stationGroup": "L/U",
    "stationNumber": 2,
    "x": 2018-02-02T09:52:05.000Z,
    "y": 3,
  },
]
`;

exports[`processes last 30 events: initial 27 days ago, two days ago, and today - tool use 1`] = `Map {}`;
